[package]
name = "cargo-mote"
version = "0.1.0"
authors = ["Will Brickner <wgbrickner@gmail.com>"]
description = "Control Roku TVs from your terminal."
edition = "2018"
repository = "https://github.com/wbrickner/mote"
keywords = ["roku", "tv", "remote", "mote"]
categories = ["command-line-utilities"]
license = "MIT"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
ssdp = "0.7.0"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.4.0"
tui = "0.14"
termion = "1.5.5"